# demoapp

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
infra/app/: Pulumi.app-demo.yaml  Pulumi.yaml  __main__.py  app  mysql.yml
infra/db/: Pulumi.db-demo.yaml  Pulumi.yaml  __main__.py  db
infra/eks/: Pulumi.eks-demo.yaml  Pulumi.yaml  __main__.py  certs  eks
infra/modules/app/: app.py
infra/modules/certs/: __init__.py  certificates.py
infra/modules/db/: db.py
infra/modules/eks/: __init__.py  auth.py  eks.py
infra/modules/svcs/: services.py
infra/modules/vpc/: __init__.py  iam_helpers.py  subnet_distributor.py  vpc.py
infra/services/: Pulumi.svcs-demo.yaml  Pulumi.yaml  __main__.py  svcs
infra/vpc/: Pulumi.vpc-demo.yaml  Pulumi.yaml  __main__.py  vpc
